# production-lob-matching-engine

./: .clang-format  .gitignore  CMakeLists.txt  GET_REAL_DATA.md  GOOGL.csv  GOOGL_real.csv  LICENSE  MSFT.csv  MSFT_real.csv  NVDA.csv  NVDA_real.csv  QUICKSTART.md  README.md  REAL_DATA_GUIDE.md  REAL_TRADING_RESULTS.md  RUN_DEMO.sh  RUN_REAL_DATA_DEMO.sh  SUMMARY.md  TSLA.csv  TSLA_real.csv  aapl_large.csv  aapl_real_today.csv  fetch_yahoo_simple.py  market_data.csv  multi_symbol.csv
benchmarks/: bench_market_sim.cpp  bench_throughput.cpp
docs/: design.md  determinism.md  microstructure.md  serialization.md  validation.md
examples/: csv_replay.cpp  live_feed_example.cpp  live_feed_simulator.cpp  replay.cpp  simple_demo.cpp
include/lob/: engine_validator.hpp  event_log.hpp  events.hpp  listener.hpp  lockfree_queue.hpp  market_data.hpp  market_data_publisher.hpp  matching_engine.hpp  messages.hpp  order.hpp  order_book.hpp  reference_order_book.hpp  telemetry.hpp  trade_tape.hpp  types.hpp
scripts/: generate_orders.py  generate_real_data.py  generate_sample_data.py
src/: binary_serializer.cpp  engine_validator.cpp  event_log.cpp  market_data.cpp  market_data_publisher.cpp  matching_engine.cpp  order_book.cpp  reference_order_book.cpp  telemetry.cpp  trade_tape.cpp
tests/: test_binary_serialization.cpp  test_engine_comparison.cpp  test_event_log.cpp  test_market_data.cpp  test_matching_engine.cpp  test_order_book_advanced.cpp  test_order_book_basic.cpp  test_order_book_partial_fills.cpp  test_order_management.cpp  test_property_based.cpp  test_reference_matcher.cpp  test_replay.cpp  test_self_trade_prevention.cpp  test_telemetry.cpp
